log/build_2024-12-30_21-04-14/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/motorcmd.py", line 15
    if __name__ = '_main_':
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

